I've added a background image to the header section and mde the header section take up the the entie height of the viewport

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 </ul>
             </nav>
         </section>
+        <section id="welcome">
+            <h1>THE CITY LIFE IS GREAT BUT SOME TIMES WE ALL<br> JUST A BREAK FROM THE CITY LIGHTS AND THE NOISE</h1>
+        </section>
     </header>
 </body>
 </html>
