I've added a few pictures to the pictures sub-folder and added pictures to the index.html, I haven't styled them yet

--- a/index.html
+++ b/index.html
@@ -26,8 +26,40 @@
             </nav>
         </section>
         <section id="welcome">
-            <h1>THE CITY LIFE IS GREAT BUT SOME TIMES WE ALL<br> JUST A BREAK FROM THE CITY LIGHTS AND THE NOISE</h1>
+            <h1>THE CITY LIFE IS GREAT BUT SOME TIMES WE ALL<br> JUST NEED A BREAK FROM THE CITY LIGHTS AND THE NOISE</h1>
         </section>
     </header>
+    <main>
+        <section id="information">
+            <h2>We have a wonderful selection of Remote islands<br> and beautiful sceneary just waiting,<br> <strong>for you come and enjoy them</strong>
+            </h2>
+        </section>
+        <section id="photo-gallery">
+            <figure>
+                <img src="../Landing-Page/pictures/cascade-g57351f2ab_1920.jpg" alt="">
+                <figcaption>A safe Haven</figcaption>
+            </figure>
+            <figure>
+                <img src="../Landing-Page/pictures/ishigaki-island-gf4147913c_1920.jpg" alt="">
+                <figcaption>Ishigaki Island</figcaption>
+            </figure>
+            <figure>
+                <img src="../Landing-Page/pictures/thailand-g90c09aaa1_1920.jpg" alt="">
+                <figcaption>Peace</figcaption>
+            </figure>
+            <figure>
+                <img src="../Landing-Page/pictures/vacation-gf638f81fc_1280.jpg" alt="">
+                <figcaption>A break From Life's worries</figcaption>
+            </figure>
+            <figure>
+                <img src="../Landing-Page/pictures/Paradise.jpg" alt="">
+                <figcaption>Privacy</figcaption>                
+            </figure>
+            <figure>
+                <img src="../Landing-Page/pictures/bird-eye.jpg" alt="">
+                <figcaption>New Perspective</figcaption>
+            </figure>
+        </section>
+    </main>
 </body>
 </html>
