I've finished off my index.html page by adding an article tag that leads to the form.html page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Yes</a>
+                        <a href="#sign-up">Yes</a>
                     </li>
                     <li>
-                        <a href="#">No</a>
+                        <a href="#welcome">No</a>
                     </li>
                     <li>
-                        <a href="#">Maybe</a>
+                        <a href="#information">Maybe</a>
                     </li>
                 </ul>
             </nav>
@@ -33,6 +33,9 @@
         <section id="information">
             <h2>We have a wonderful selection of Remote islands<br> and beautiful sceneary just waiting,<br> <strong>for you come and enjoy them</strong>
             </h2>
+            <h3>
+                <strong>AND IT'S ALL FOR FREE</strong>
+            </h3>
         </section>
         <section id="photo-gallery">
             <figure>
@@ -60,6 +63,12 @@
                 <figcaption>New Perspective</figcaption>
             </figure>
         </section>
+        <article id="sign-up">
+            <h2>If you feel like your ready step away<br> from the city the city life,<br> then all you need to do is sign up<a href="../Landing-Page/html-pages/form.html">here</a></h2>
+        </article>
     </main>
+    <footer>
+        <h5>This website is not real and the pictures were taken from <em>Pixabay</em> and <em>Pexels</em></h5>
+    </footer>
 </body>
 </html>
