I've completed my form.html page, it has a background image and a sign-up sheet

--- a/html-pages/form.html
+++ b/html-pages/form.html
@@ -10,18 +10,19 @@
 <body>
     <form id="sign-up" action="#" method="#">
         <label for="firstname">FirstName:</label>
-        <input id="firstname" type="text" name="Firstname"><br>
+        <input id="firstname" type="text" name="Firstname" placeholder="Enter your Firstname here" required><br>
         <label for="lastname">LastName:</label>
-        <input id="lastname" type="text" name="LastName"><br>
+        <input id="lastname" type="text" name="LastName" placeholder="Enter your LastName here" required><br>
         <label for="age">Age:</label>
-        <input id="age" type="age" name="age" min="18" max="130"><br>
+        <input id="age" type="age" name="age" min="18" max="130" placeholder="Enter your age here" required><br>
         <label for="email">Email:</label>
-        <input id="email" type="email" name="email" placeholder="myemail@xyz.com"><br>
+        <input id="email" type="email" name="email" placeholder="Enter your email here" required><br>
         <label for="pwd">New password:</label>
-        <input id="pwd" type="password" name="password"><br>
+        <input id="pwd" type="password" name="password" placeholder="Enter your password here" required><br>
         <label for="password">Confirm password:</label>
-        <input id="password" type="password" name="password"><br>
-        
+        <input id="password" type="password" name="password" placeholder="Confirm your password here" required><br>
+        <input id="submit" type="submit" >
+        <a href="../index.html">Never Mind</a>
     </form>
 </body>
 </html>
